syntax = "proto3";

package ai.metathings.service.identityd2;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message RemoveEntityFromDomainRequest {
	OpDomain domain = 1 [(validator.field) = {msg_exists: true}];
	OpEntity entity = 2 [(validator.field) = {msg_exists: true}];
}
